fix club actions alignment on mobile

--- a/app/assets/stylesheets/pages/p-clubs/b-clubs-menu.sass
+++ b/app/assets/stylesheets/pages/p-clubs/b-clubs-menu.sass
@@ -32,13 +32,17 @@
   .b-subposter-actions
     +block
 
+    +lte_ipad
+      align-items: flex-start
+      flex-direction: row
+
     .subheadline
       flex-basis: 100%
 
-    +iphone-portrait
-      .upload-form
-        display: block
-        width: 100%
+    // +iphone-portrait
+    //   .upload-form
+    //     display: block
+    //     width: 100%
 
     .upload
       input
